# problem-solving

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_application.sh  docker-compose.yaml
docker/: dockerfile
src/: CMakeLists.txt  main.cpp
src/application/: another.cpp  another.hpp
